# MyAi-Enterprise-Platform-

./: .env.cloud.example  .env.example  .gitignore  DEMO_GUIDE.md  DEPLOY.md  Dockerfile  ENTERPRISE.md  HOW_MYAI_WORKS.md  ODYSSEUS_INTEGRATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh  test_new_features.py
app/: __init__.py  __main__.py  config.py  main.py
app/agent/: connector_tools.py  core.py  harness.py  intercepts.py  outlook_tools.py  persona.py  prompts.py  tools.py
app/api/: __init__.py  admin.py  auth_routes.py  connectors.py  copilot.py  copilot_uploads.py  council.py  dashboard.py  files.py  inbox.py  insights.py  logs.py  preferences.py  threads.py
app/auth/: __init__.py  jwt.py  middleware.py  sso.py
app/models/: __init__.py  schemas.py
app/odysseus_bridge/: __init__.py  proxy.py  supervisor.py
app/services/: __init__.py  agent_loop.py  audit.py  auto_skill.py  computer_use.py  connector_manager.py  deep_research.py  demo_seed.py  employees.py  grounding.py  harvester_gateway.py  harvester_worker.py  lifecycle_ticker.py  llm_client.py  local_files.py  mail_ai.py  ollama_client.py  research_scheduler.py  semantic_memory.py  storage.py  usage.py  vision.py  websearch.py
app/storage/: __init__.py  database.py  models.py
app/tenants/: __init__.py  registry.py  router.py
eval/: __init__.py  last_report.json  run_eval.py
scripts/: bootstrap_odysseus.ps1  bootstrap_odysseus.sh
tests/: e2e_week.py  test_grounding.py  ui_smoke.py
web/: app.js  index.html  manifest.json  styles.css  sw.js
(+26 files in other folders)
